# binance-market-streaming-pipeline

./: .dockerignore  .env.example  .env.streaming.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.spark  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: jmx_exporter.yml  log4j.properties  metrics.properties  prometheus.yml
dags/: .gitkeep  README.md  binance_connector_dag.py  cleanup_utils.py  data_quality.py  lifecycle_cleanup_dag.py  retrigger_utils.py  streaming_processing_dag.py  ticker_monitor_dag.py
grafana/dashboards/: .gitkeep  market-overview.json  symbol-deep-dive.json  system-health.json  trading-analytics.json
scripts/: check_pipeline.sh  gen.py  health_check.sh  kill_jobs.sh  metrics_summary.sh  simple_consumer.py  start_all.sh  status.sh  stop_all.sh
src/api/: __init__.py  app.py  dependencies.py  main.py  models.py
src/binance_kafka_connector/: __init__.py  __main__.py  batcher.py  client.py  config.py  connector.py  core.py  kafka_producer.py  logging_config.py  models.py  processor.py  producer.py  websocket_client.py
src/pyspark_streaming_processor/: __init__.py  analytics_jobs.py  anomaly_detection_job.py  config.py  connectors.py  core.py  graceful_shutdown.py  technical_indicators_job.py  trade_aggregation_job.py
src/storage/: __init__.py  backends.py  duckdb_storage.py  lifecycle.py  minio.py  minio_storage.py  postgres.py  (+6 more)
tests/: __init__.py  test_airflow.py  test_api.py  test_binance_connector.py  test_grafana.py  test_integration_e2e.py  test_storage.py  test_streaming.py  test_utils.py
(+57 files in other folders)
